Bug 50457 - Usage of 'xlock' kills xserver
Summary: Usage of 'xlock' kills xserver
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg 6.7.0
Hardware: Other All
: medium normal
Assignee: Daniel Vetter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-29 04:53 UTC by Zdenek Kabelac
Modified: 2017-01-12 14:56 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
bt full (6.49 KB, text/plain)
2012-05-29 05:09 UTC, Zdenek Kabelac
no flags Details

Description Zdenek Kabelac 2012-05-29 04:53:33 UTC
While using SNA architecture - I've found out, that leaving xlock running on the machine usually kills Xorg after some time.
I'm not exactly sure which xlock mode is 'killer' - it usually happens
when I leave machine for 1/2 hour and return back.

There seems to be no kernel GPU hung reported in kernel message 
only Xorg crash coredump.

sna git commit: 55e6f5f220401318529e81f7c96fe0af3b893a0c
xorg-x11-server-Xorg-1.12.1-2.fc18.x86_64
linux kernel  3.4   upstream.
hw: T61, GMA965, 4GB

#0  0x00007f61e7083c05 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:63
#1  0x00007f61e70853b8 in __GI_abort () at abort.c:90
#2  0x00007f61e707ca32 in __assert_fail_base (fmt=0x7f61e71c9c28 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", 
    assertion=assertion@entry=0x7f61e5472a90 "kgem->nexec < (sizeof(kgem->exec)/sizeof((kgem->exec)[0]))", 
    file=file@entry=0x7f61e54724e2 "kgem.c", line=line@entry=913, function=function@entry=0x7f61e5473400 "kgem_add_handle")
    at assert.c:93
#3  0x00007f61e707cae2 in __GI___assert_fail (
    assertion=assertion@entry=0x7f61e5472a90 "kgem->nexec < (sizeof(kgem->exec)/sizeof((kgem->exec)[0]))", 
    file=file@entry=0x7f61e54724e2 "kgem.c", line=line@entry=913, function=function@entry=0x7f61e5473400 "kgem_add_handle")
    at assert.c:102
#4  0x00007f61e53b8586 in kgem_add_handle (bo=<optimized out>, kgem=<optimized out>) at kgem.c:913
#5  _kgem_add_bo (kgem=kgem@entry=0x7f61e9131218, bo=<optimized out>) at kgem.c:925
#6  0x00007f61e53be4ba in kgem_add_reloc (kgem=kgem@entry=0x7f61e9131218, pos=<optimized out>, bo=<optimized out>, 
    bo@entry=0x1e6e320, read_write_domain=read_write_domain@entry=163840, delta=<optimized out>, delta@entry=0)
    at kgem.c:3119
#7  0x00007f61e53c2ed1 in sna_copy_bitmap_blt (_bitmap=_bitmap@entry=0x419a030, drawable=<optimized out>, gc=0x231f1d0, 
    box=box@entry=0x7fffa6a73980, n=<optimized out>, n@entry=1, sx=sx@entry=0, sy=sy@entry=0, reverse=reverse@entry=0, 
    upsidedown=0, bitplane=bitplane@entry=1, closure=0x7fffa6a73a30) at sna_accel.c:5253
#8  0x000000000054eab5 in miCopyRegion (pSrcDrawable=pSrcDrawable@entry=0x419a030, 
    pDstDrawable=pDstDrawable@entry=0x1ddc170, pGC=pGC@entry=0x231f1d0, pDstRegion=pDstRegion@entry=0x7fffa6a73980, 
    dx=dx@entry=0, dy=dy@entry=0, copyProc=copyProc@entry=0x7f61e53c2990 <sna_copy_bitmap_blt>, bitPlane=bitPlane@entry=1, 
    closure=closure@entry=0x7fffa6a73a30) at micopy.c:121
#9  0x000000000054f056 in miDoCopy (pSrcDrawable=pSrcDrawable@entry=0x419a030, pDstDrawable=pDstDrawable@entry=0x1ddc170, 
    pGC=pGC@entry=0x231f1d0, xIn=xIn@entry=0, yIn=yIn@entry=0, widthSrc=1680, heightSrc=heightSrc@entry=1050, 
    xOut=xOut@entry=0, yOut=yOut@entry=0, copyProc=0x7f61e53c2990 <sna_copy_bitmap_blt>, bitPlane=bitPlane@entry=1, 
    closure=closure@entry=0x7fffa6a73a30) at micopy.c:297
#10 0x00007f61e53da013 in sna_copy_plane (src=0x419a030, dst=0x1ddc170, gc=0x231f1d0, src_x=0, src_y=0, w=<optimized out>, 
    h=1050, dst_x=0, dst_y=0, bit=1) at sna_accel.c:5583
#11 0x0000000000504a0c in damageCopyPlane (pSrc=0x419a030, pDst=0x1ddc170, pGC=0x231f1d0, srcx=0, srcy=<optimized out>, 
    width=1680, height=1050, dstx=0, dsty=0, bitPlane=1) at damage.c:857
#12 0x0000000000430635 in ProcCopyPlane (client=0x2b6f2e0) at dispatch.c:1667
#13 0x000000000043442a in Dispatch () at dispatch.c:425
#14 0x0000000000423495 in main (argc=4, argv=0x7fffa6a73d28, envp=<optimized out>) at main.c:288
Comment 1 Zdenek Kabelac 2012-05-29 05:09:04 UTC
Created attachment 62214 [details]
bt full

If more things are needed from coredump - ask quickly before my machine get upgrades ;)
Comment 2 Chris Wilson 2012-05-29 05:14:04 UTC
commit 264d1b1e1fb368f7845a8112bfa2ad2224acabd9
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue May 29 13:03:56 2012 +0100

    sna: Also check for a free exec slot for the upload buffers
    
    As we check before allocating the upload buffer, we can not be certain
    that we will allocate an already attached bo or that we have a free exec
    slot. So always check that we have an extra exec slot available - the
    false positive rate is going to be negligible.
    
    Reported-by: Zdenek Kabelac <zdenek.kabelac@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=50457
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 Jari Tahvanainen 2017-01-12 14:56:03 UTC
Closing resolved+fixed after >four years of silence.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.